# lpm

./: .gitignore  .goreleaser.yml  .lpm.yml  .tmp_out.txt  AGENTS.md  CLAUDE.md  IDEAS.md  LICENSE  NOTIFICATIONS.md  README-CLI.md  README.md  Untitled  auto_crop.py  floodfill_transparent.py  floodfill_transparent2.py  go.mod  install.sh  main.go  make_transparent.py  make_white_transparent.py  remove_white_frame.py
.github/workflows/: release.yml  skills.yml
.next/: trace  trace-build
cli/: Cargo.toml  build.rs
cli/src/: config.rs  config_cmd.rs  control.rs  duplicate.rs  error.rs  job.rs  list.rs  logs.rs  main.rs  project.rs  remove.rs  run.rs  service.rs  service_cmd.rs  setstatus.rs  start.rs  status.rs  statussock.rs  stop.rs  style.rs  terminals.rs  tmux.rs  util.rs  wait.rs
cmd/: clone.go  completion.go  edit.go  init.go  kill.go  list.go  open.go  remove.go  root.go  run.go  start.go  status.go  switch.go  ui.go  update_check.go  version.go
desktop/: PEER_PROTOCOL.md  Taskfile.yml  actions.go  agent_detect.go  aigen.go  app.go  appmenu_darwin.go  appmenu_darwin.m  cleanup.sh  clone.go  detach.go  detached.go  dockmenu_darwin.go  dockmenu_darwin.m  duplicate.go  duplicate_clone_darwin.go  duplicate_clone_other.go  git.go  git_test.go  go.mod  go.sum  log_streaming.go  main.go  notes.go  openin.go  portconflicts.go  portforward.go  portforward_test.go  portpoller.go  portpoller_test.go  projects.go  pty.go  settings.go  socket.go  sshconfig.go  sshconfig_test.go  sshsync.go  status.go  templates.go  terminal_resume.go  (+8 more)
desktop/aiskill/: SKILL.md
desktop/docktileplugin/: Info.plist  LPMDockTilePlugin.m
desktop/frontend/: index.html  package-lock.json  package.json  test-cycle-scenario.test.ts  tsconfig.json  vite.config.ts
desktop/frontend/bridge/: commands.d.ts  commands.js  models.d.ts  models.js  runtime.js
desktop/frontend/scripts/: gen-tauri-bindings.mjs
desktop/frontend/src/: App.tsx  DetachedApp.tsx  actionColors.ts  actionConfig.ts  actionIds.test.ts  actionIds.ts  actionLevels.test.ts  actionLevels.ts  actionMove.test.ts  actionPayload.test.ts  actionTree.test.ts  actionTree.ts  actionsGesture.test.ts  actionsGesture.ts  actionsStructural.test.ts  actionsStructural.ts  agentModelOptions.ts  agentUsageFormat.test.ts  agentUsageFormat.ts  aiInstructions.ts  autoCommit.ts  claudeSetupSteps.test.ts  claudeSetupSteps.ts  codexResume.test.ts  codexResume.ts  composerText.ts  composerValue.test.ts  composerValue.ts  composerVariants.test.ts  composerVariants.ts  diagnostics.test.ts  diagnostics.ts  download.ts  events.ts  fileDrop.ts  forkSession.test.ts  forkSession.ts  generatorPromptActions.ts  generatorRun.test.ts  generatorRun.ts  (+82 more)
desktop/frontend/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
desktop/frontend/src-tauri/assets/sounds/: generate.py
desktop/frontend/src-tauri/capabilities/: default.json
desktop/frontend/src-tauri/icons/: icon.icns
desktop/frontend/src-tauri/src/: SKILL.md  actions.rs  agent_limits.rs  agent_usage.rs  aigen.rs  autosync.rs  bounds.rs  browser.rs  cli_install.rs  clipboard.rs  codex_statusline.rs  commands_real.rs  config.rs  config_cmds.rs  config_edit.rs  configwatch.rs  control.rs  detached.rs  dockmenu.m  dockmenu.rs  files.rs  fsatomic.rs  generated_commands.rs  git.rs  hooks.rs  jobs.rs  lib.rs  log_streaming.rs  main.rs  mainwindow.rs  mdns.rs  menu.rs  message_history.rs  notes_blobs.rs  notes_cmds.rs  notes_store.rs  openin.rs  peer.rs  peerclient.rs  peerdiscovery.rs  (+33 more)
desktop/notes/: blobs.go  blobs_test.go  doc.go  store.go  store_test.go
desktop/vault/: export.go  export_test.go  keychain_darwin.go  keychain_other.go  vault.go
docs/: config.html  index.html
docs/videos/: add-action.mov  add-project.mov
documentation/liquid-glass/: problem-memory.md
internal/aigen/: aigen.go  aigen_test.go
internal/config/: config.go  config_test.go
internal/portcheck/: portcheck.go  portcheck_test.go
internal/tmux/: tmux.go
internal/version/: version.go
lpm/: README.md  SKILL.md
lpm-cli/: README.md  SKILL.md
lpm-cli/agents/: openai.yaml
lpm-config/: README.md  SKILL.md
lpm-config/agents/: openai.yaml
lpm-config/references/: actions.md  core.md  sharing.md  ssh.md  validation.md  yaml-schema.md
lpm/agents/: openai.yaml
lpm/references/: yaml-schema.md
mobile/: .gitignore  PROTOCOL.md  Package.swift  README.md  deploy.sh  project.yml  run.sh
mobile/Sources/LpmMobile/: ActionEditorSheet.swift  ActionInputsSheet.swift  AddProjectSheet.swift  AgentAskSheet.swift  AppDelegate.swift  AppModel.swift  AppearanceMode.swift  ApprovalPairingSheet.swift  AutomationEditorSheet.swift  AutomationViews.swift  BackgroundRunSheet.swift  CodeEditorTextView.swift  ComposerActionsSheet.swift  ComposerAttachments.swift  ComposerStore.swift  ComposerTabStrip.swift  ComposerVariantsSheet.swift  DemoConfig.swift  DemoGit.swift  DemoJobs.swift  DemoProjects.swift  DemoServer.swift  DemoStats.swift  DemoTerminals.swift  DemoWorld.swift  DiffHighlighter.swift  DiffListView.swift  DiffRendering.swift  DirBrowserView.swift  DuplicateOptionsView.swift  EditEndpointView.swift  FileViewerSheet.swift  GenerationTimeout.swift  GitBranchSheet.swift  GitDiffView.swift  GitReviewStore.swift  GitReviewView.swift  Haptics.swift  HistoryScreen.swift  HostProbe.swift  (+27 more)
mobile/Sources/NotificationService/: NotificationService.swift
mobile/Sources/Shared/: PushKey.swift  PushPayload.swift
mobile/web/: terminal.html
scripts/: build-cli.sh  check-skills.sh  create-dmg.sh  release.sh
website/: package.json  pnpm-lock.yaml
website/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
website/app/best-terminal-for-claude-code-and-codex/: page.tsx  (+1 more)
website/components/: feature-card.tsx  footer.tsx  github-star-button.tsx  nav-mobile-menu.tsx  nav.tsx  related-pages.tsx  section-header.tsx  theme-toggle.tsx
website/lib/: analytics.ts  apns.ts  config-sections.ts  github-stats.ts  links.ts  og-template.tsx  release-verification.ts  structured-data.ts  use-platform.ts
(+755 files in other folders)
