[package]
name = "lpm-cli"
version = "0.9.1"
edition = "2021"
description = "Read-only command-line companion for the lpm desktop app"

[[bin]]
name = "lpm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"

[dev-dependencies]
tempfile = "3"
